--- a/Prix de l'immobilier à Montpellier.ipynb
+++ b/Prix de l'immobilier à Montpellier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,18 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#IMPORTING DATA\n",
     "\n",
-    "df = pd.read_csv(\"data/Prix de l'immobilier à Montpellier en 2018 (avec les données de la métropole).csv\",sep=';')"
+    "df = pd.read_csv(\"data/donne immobillier.csv\",sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -128,49 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1mvaleur_fonciere               float64\n",
-      "surface_reelle_bati           float64\n",
-      "nombre_pieces_principales     float64\n",
-      "longitude                     float64\n",
-      "latitude                      float64\n",
-      "population_iris               float64\n",
-      "pop_15_64_iris                float64\n",
-      "nb_logement_iris              float64\n",
-      "tx_pauvrete_iris              float64\n",
-      "tx_menages_imposables_iris    float64\n",
-      "dec_med_iris                  float64\n",
-      "disp_med_iris                 float64\n",
-      "tx_impot_iris                 float64\n",
-      "part_rev_act_salarie_iris     float64\n",
-      "part_rev_chomage_iris         float64\n",
-      "part_rev_retraites_iris       float64\n",
-      "tx_emploi_15_64_iris          float64\n",
-      "tx_cdi_iris                   float64\n",
-      "nb_generalistes_iris          float64\n",
-      "nb_paramed_iris               float64\n",
-      "nb_com_alim_iris              float64\n",
-      "nb_eq_sportif_iris            float64\n",
-      "densite_population            float64\n",
-      "dtype: object\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Verification des types de variable\n",
     "\n",
-    "print(cl(df.dtypes, attrs = ['bold']))"
+    "#print(cl(df.dtypes, attrs = ['bold']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +185,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +241,7 @@
        "                          validation_fraction=0.1, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,14 +254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1mle score R2 est 0.8672941558943352\u001b[0m\n"
+      "\u001b[1mle score R2 est 0.8657759200073997\u001b[0m\n"
      ]
     }
    ],
@@ -303,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,14 +281,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1mLa Variance Expliquée est 0.8673577754469646\u001b[0m\n"
+      "\u001b[1mLa Variance Expliquée est 0.8658421971993676\u001b[0m\n"
      ]
     }
    ],
